[tool.poetry]
name = "llama-index-examples"
version = "0.1.0"
description = ""
authors = ["Jose F. Romaniello <jose@okta.com>", "Javier Centurion <javier.centurion@okta.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.scripts]
llama-index-examples = "llama_index_rag.main:main"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.12.6"
termcolor = "^2.5.0"
python-dotenv = "^1.0.1"
llama-index-auth0-ai = {path = "../../../packages/llama-index-auth0-ai", develop = true}
openfga-sdk = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
